Table users {
  id                 int          [pk, increment, note: "Primary key"]
  full_name          varchar(200) [not null, note: "User's full name"]
  email              varchar(255) [not null, unique, note: "Primary email. Validate format before insert"]
  mobile_number      varchar(255) [not null, unique, note: "Primary mobile number."]
  password_hash      varchar(255) [not null, note: "Hashed password (bcrypt / argon2). Never store plain text."]
  password_updated_at timestamp    [note: "When password was last changed"]
  reset_password_token varchar(255) [unique, note: "One-time token for password reset; pair with reset_password_expires_at"]
  reset_password_expires_at timestamp [note: "Expiry for reset token"]
  referral_code      varchar(64)  [unique, note: "Public referral code assigned to user"]
  referred_by_user_id int         [ref: > users.id, note: "FK -> users.id, nullable if no referrer. Immediate parent in hierarchy."]
  status             enum  [not null, default: 'active', note: "Account status"]
  is_verified        boolean      [not null, default: false, note: "Whether phone/email OTP or similar verification completed"]
  role               enum  [not null, default: 'user', note: "Role: admin | user"]
  work_role          enum  [not null, default: 'investor', note: "Work Role: investor | worker"]
  business_done      varchar [not null, default: 0, note: "Total business done till now from any source"]
  created_at         timestamp    [not null, default: 'CURRENT_TIMESTAMP', note: "Record creation time"]
  updated_at         timestamp    [not null, default: 'CURRENT_TIMESTAMP', note: "Last update time — maintain with trigger or application"]
}

Table user_closure {
  ancestor_id       int       [not null, ref: > users.id, note: "Ancestor user id (can be self or parent)"]
  descendant_id     int       [not null, ref: > users.id, note: "Descendant user id (can be self or child)"]
  depth             int       [not null, note: "Distance between ancestor and descendant: 0 = self, 1 = immediate child, etc."]
  PRIMARY KEY (ancestor_id, descendant_id)
}

Table levels {
  id                           int       [pk, increment, note: "Primary key"]
  title                        varchar(100) [not null, note: "Level name / title (e.g., Bronze, Silver, Gold)"]
  appraisal_bonus              decimal(12,2) [not null, default: 0.00, note: "Fixed appraisal bonus amount (currency)"]
  passive_income_percentage    decimal(5,2)  [not null, default: 0.00, note: "Percentage value"]
  criteria_minimum_business    decimal(14,2) [not null, default: 0.00, note: "Minimum business required to reach this level (currency)"]
  
  hierarchy                    int           [not null, note: "Ordering index: lower = lower priority"]
  notes                        text          [note: "Optional notes about this level and special rules"]
  created_at                   timestamp     [not null, default: 'CURRENT_TIMESTAMP']
  updated_at                   timestamp     [not null, default: 'CURRENT_TIMESTAMP']
}

Table user_levels_history {
  id           int       [pk, increment, note: "Primary key"]
  user_id      int       [not null, ref: > users.id, note: "FK -> users.id"]
  level_id     int       [not null, ref: > levels.id, note: "FK -> levels.id"]
  start_at     timestamp [not null, note: "When the user entered this level"]
  end_at       timestamp [not null, note: "When the user left this level."]
  created_at   timestamp [not null, default: 'CURRENT_TIMESTAMP']
  updated_at   timestamp [not null, default: 'CURRENT_TIMESTAMP']
}

Table wallets {
  id           int       [pk, increment, note: "Primary key"]
  user_id      int       [null, ref: > users.id, note: "FK -> users.id (wallet owner), can be null only when wallet.wallet_type is company"]
  balance      decimal(18,2) [not null, default: 0.00, note: "Current balance"]
  wallet_type  enum [not null, default: 'personal', note: "personal | company:investment | company:income"]
  currency     varchar(10) [not null, default: 'USDT', note: "currency code (USD, INR, etc.)"]
  created_at   timestamp  [not null, default: 'CURRENT_TIMESTAMP']
  updated_at   timestamp  [not null, default: 'CURRENT_TIMESTAMP']
}

Table transactions {
  id                      int             [pk, increment, note: "Primary key"]
  from_wallet_id          int             [ref: > wallets.id, note: "FK -> wallets.id (source wallet); nullable for system-initiated credits"]
  to_wallet_id            int             [ref: > wallets.id, note: "FK -> wallets.id (destination wallet); nullable for system withdrawals"]
  amount                  decimal(18,2)   [not null, note: "Transaction amount (currency units)"]
  initiated_by            int             [not null, ref: > users.id, note: "FK -> users.id: user who initiated the transaction"]
  description             varchar(1000)   [note: "Short description or memo for the transaction"]
  status                  enum            [not null, default: 'pending', note: "Transaction status — allowed: pending | approved | rejected"]
  status_updated_at       timestamp       [note: "When status was last changed"]
  status_updated_by       int             [ref: > users.id, note: "FK -> users.id: who updated the status (admin/operator)"]
  type                    enum            [not null, note: "p2p, c2c, add:company, add:personal, income:bonaza, income:passive, income:bot, income:trading, income:appraisal, purchase:package, withdraw:company, withdraw:personal"]
  entity_id               int             [note: "Optional generic FK to the related entity. Store target entity id for linking."]
  notes                   text            [note: "Free-form admin notes or audit comments"]
  created_at              timestamp       [not null, default: 'CURRENT_TIMESTAMP', note: "Record creation time"]
  updated_at              timestamp       [not null, default: 'CURRENT_TIMESTAMP', note: "Last update time — maintain with trigger or application"]
}

Table bot_activations {
  id                int            [pk, increment, note: "Primary key"]
  user_id           int            [not null, ref: > users.id, note: "FK -> users.id: user whose bot is activated"]
  activated_at      timestamp      [not null, note: "When the bot was activated"]
  status            enum           [not null, default: 'active', note: "active | expired | consumed"]
  income_received   decimal(18,2)  [not null, default: 0.00, note: "Total income generated by this bot activation"]
  max_income        decimal(18,2)  [not null, note: "Maximum income this bot is allowed to generate"]
  notes             text           [note: "Optional comments or admin notes"]
  created_at        timestamp      [not null, default: 'CURRENT_TIMESTAMP']
  updated_at        timestamp      [not null, default: 'CURRENT_TIMESTAMP']
}

Table user_packages {
  id                 int            [pk, increment, note: "Primary key"]
  user_id            int            [not null, ref: > users.id, note: "FK -> users.id: package buyer"]
  package_id         int            [not null, note: "FK -> packages.id. Purchased package."]
  investment_amount  decimal(18,2)  [not null, note: "Amount invested in this package"]
  bot_activation_id  int            [ref: > bot_activations.id, note: "FK -> bot_activations.id. Bot associated with this package purchase"]
  start_date         timestamp      [not null, note: "When package benefits start"]
  status             enum           [not null, default: 'active', note: "active | complete"]
  notes              text           [note: "Optional admin notes"]
  created_at         timestamp      [not null, default: 'CURRENT_TIMESTAMP']
  updated_at         timestamp      [not null, default: 'CURRENT_TIMESTAMP']
}
